--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,18 @@
   width: 70%;
 }
 
+.technology-label {
+  font-size: 1rem;
+  background-color: rgba(255, 255, 255, 0.75);
+  white-space: nowrap;
+  color: black;
+  padding: 0.2rem;
+  border-radius: 0.25rem;
+  text-align: center;
+  position: absolute;
+  transform: translateX(-50%) translateY(120%);
+}
+
 #about {
   margin-left: -24px;
   font-size: 100px;
